@@ -14,7 +14,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: proc-old.test,v 1.6 2000/04/10 17:19:03 ericm Exp $
+# RCS: @(#) $Id: proc-old.test,v 1.1 2001/01/28 21:55:16 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -171,13 +171,13 @@ test proc-old-3.2 {arguments and defaults} {
 	return [list $x $y $z]
     }
     list [catch {tproc 11 12} msg] $msg
-} {1 {no value given for parameter "z" to "tproc"}}
+} {1 {wrong # args: should be "tproc x y z"}}
 test proc-old-3.3 {arguments and defaults} {
     proc tproc {x y z} {
 	return [list $x $y $z]
     }
     list [catch {tproc 11 12 13 14} msg] $msg
-} {1 {called "tproc" with too many arguments}}
+} {1 {wrong # args: should be "tproc x y z"}}
 test proc-old-3.4 {arguments and defaults} {
     proc tproc {x {y y-default} {z z-default}} {
 	return [list $x $y $z]
@@ -201,7 +201,7 @@ test proc-old-3.7 {arguments and defaults} {
 	return [list $x $y $z]
     }
     list [catch {tproc} msg] $msg
-} {1 {no value given for parameter "x" to "tproc"}}
+} {1 {wrong # args: should be "tproc x ?y? ?z?"}}
 test proc-old-3.8 {arguments and defaults} {
     list [catch {
 	proc tproc {x {y y-default} z} {
@@ -209,7 +209,7 @@ test proc-old-3.8 {arguments and defaults} {
 	}
 	tproc 2 3
     } msg] $msg
-} {1 {no value given for parameter "z" to "tproc"}}
+} {1 {wrong # args: should be "tproc x ?y? z"}}
 test proc-old-3.9 {arguments and defaults} {
     proc tproc {x {y y-default} args} {
 	return [list $x $y $args]
@@ -233,7 +233,7 @@ test proc-old-3.12 {arguments and defaults} {
 	return [list $x $y $args]
     }
     list [catch {tproc} msg] $msg
-} {1 {no value given for parameter "x" to "tproc"}}
+} {1 {wrong # args: should be "tproc x ?y? args"}}
 
 test proc-old-4.1 {variable numbers of arguments} {
     proc tproc args {return $args}
@@ -258,7 +258,7 @@ test proc-old-4.5 {variable numbers of arguments} {
 test proc-old-4.6 {variable numbers of arguments} {
     proc tproc {x missing args} {return $args}
     list [catch {tproc 1} msg] $msg
-} {1 {no value given for parameter "missing" to "tproc"}}
+} {1 {wrong # args: should be "tproc x missing args"}}
 
 test proc-old-5.1 {error conditions} {
     list [catch {proc} msg] $msg
