@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: proc.test,v 1.7 2000/04/10 17:19:03 ericm Exp $
+# RCS: @(#) $Id: proc.test,v 1.2 2001/01/28 21:55:16 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -159,7 +159,7 @@ test proc-3.4 {TclObjInterpProc, procs execute in the namespace in which they we
 test proc-3.5 {TclObjInterpProc, any old result is reset before appending error msg about missing arguments} {
     proc p {x} {info commands 3m}
     list [catch {p} msg] $msg
-} {1 {no value given for parameter "x" to "p"}}
+} {1 {wrong # args: should be "p x"}}
 
 catch {eval namespace delete [namespace children :: test_ns_*]}
 catch {rename p ""}
